trips/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  labels:
    app: trips
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      annotations:
        trips.jshipster.io/allowlist-revision: "2026-09-12-romi-update"
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        # Placeholder image, will be updated by CI
        image: prodacr1234.azurecr.io/trips:main-224ce53
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "12Mi"
            cpu: "5m"
          limits:
            memory: "32Mi"
            cpu: "50m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 3
          failureThreshold: 2
