trips/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips
  labels:
    app: trips
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: trips
